# SERVER

./: AuthDatabase.cpp  AuthDatabase.h  AuthManager.cpp  AuthManager.h  CMakeLists.txt  CategoriesDatabase.cpp  CategoriesDatabase.h  CategoriesManager.cpp  CategoriesManager.h  ComputeDatabase.cpp  ComputeDatabase.h  ComputeManager.cpp  ComputeManager.h  Database.cpp  Database.h  EntriesDatabase.cpp  EntriesDatabase.h  EntriesManager.cpp  EntriesManager.h  EntryUser.h  FoldersDatabase.cpp  FoldersDatabase.h  FoldersManager.cpp  FoldersManager.h  TodoDatabase.cpp  TodoDatabase.h  TodoManager.cpp  TodoManager.h  main.cpp  main.h
